--- a/contact-livraison.html
+++ b/contact-livraison.html
@@ -6,7 +6,7 @@
     <title>Restaurant - Contact & Livraison</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Styles pour la mise en page en deux colonnes */
+        /* Styles pour la mise en page en deux colonnes avec des blocs distincts */
         .columns {
             display: flex;
             justify-content: space-between;
@@ -15,11 +15,19 @@
 
         .column {
             flex: 1;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            background-color: #f9f9f9;
         }
 
         .column ul {
             list-style-type: none;
             padding: 0;
+        }
+
+        .column h2 {
+            margin-top: 0;
         }
     </style>
 </head>
@@ -39,6 +47,7 @@
     <section class="content">
         <h1>Contact & Livraison</h1>
         <div class="columns">
+            <!-- Bloc Contact -->
             <div class="column">
                 <h2>Contact</h2>
                 <ul>
@@ -47,6 +56,8 @@
                     <li>Adresse : 123 Rue de la Cuisine, 75000 Paris, France</li>
                 </ul>
             </div>
+            
+            <!-- Bloc Livraison -->
             <div class="column">
                 <h2>Livraison</h2>
                 <p>Livraison disponible dans tout Paris.</p>
