l' ajout  et l suppression des element non desiser

--- a/contact-livraison.html
+++ b/contact-livraison.html
@@ -32,7 +32,12 @@
                     <li>Email : contact@restaurant.com</li>
                     <li>Adresse : 123 Rue de la Cuisine, 75000 Paris, France</li>
                 </ul>
-                <p>Faite votre choix sur notre  :</p>
+                <p>Faite votre choix sur notre Menu   :</p>
+                <ul>
+                    <li>Nourriture</li>
+                    <li>Dessert</li>
+                    <li>Boisson</li>
+                </ul>
                 
                 <p>Livraison disponible dans tout Paris.</p>
             </div>
