--- a/menu-nourriture.html
+++ b/menu-nourriture.html
@@ -14,7 +14,8 @@
                 <li><a href="menu-boisson.html">Menu Boisson</a></li>
                 <li><a href="menu-nourriture.html">Menu Nourriture</a></li>
                 <li><a href="menu-dessert.html">Menu Dessert</a></li>
-                <li><a href="contact-livraison.html">Contact & Livraison</a></li>
+                <li><a href="livraison.html">Contact & Livraison</a></li>
+                <li><a href="Contact.html">Livraison</a></li>
             </ul>
         </nav>
     </header>
