l' ajout  du code  sur la page de contact

--- a/Contact.html
+++ b/Contact.html
@@ -15,8 +15,14 @@
                 <li><a href="menu-nourriture.html">Menu Nourriture</a></li>
                 <li><a href="menu-dessert.html">Menu Dessert</a></li>
                 <li><a href="livraison.html">Livraison</a></li>
-                <li><a href="Contact.html">Livraison</a></li>
+                <li><a href="Contact.html">Contact</a></li>
 
             </ul>
         </nav>
     </header>
+    <footer>
+        <p>&copy; 2024 Restaurant. Tous droits réservés.</p>
+   </footer>
+</body>
+</html>
+   
