--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="menu-nourriture.html">Menu Nourriture</a></li>
                 <li><a href="menu-dessert.html">Menu Dessert</a></li>
                 <li><a href="livraison.html"> Livraison</a></li>
-                <li><a href="Contact.html"> Livraison</a></li>
+                <li><a href="Contact.html"> Contact</a></li>
             </ul>
         </nav>
     </header>
