--- a/menu-dessert.html
+++ b/menu-dessert.html
@@ -21,7 +21,7 @@
     </header>
 
     <section class="content">
-       
+        <h1>Menu Dessert</h1>
         <p>Terminez votre repas avec nos délicieux desserts.</p>
         <!-- Ajoutez ici les éléments spécifiques du menu dessert -->
     </section>
